--- a/tutorial/2-views.html
+++ b/tutorial/2-views.html
@@ -26,13 +26,21 @@ var Comment = Backbone.Model.extend({
   initialize: function(message) {
     /* Set the initial values for `votes` to 0 and `message` to the message.
      * Remember to use setters when working with attributes! */
+     this.set('votes',0); 
+     this.set('message',message);
   },
   votes: function() {
+    return this.get('votes');
     /* Return the votes attribute on this model.
      * Remember to use a getter when working with attributes! */
   },
   upvote: function(){
+    this.set('votes', this.get('votes')+1);
+
     // Set the `votes` attribute to the current vote count plus one.
+  },
+  downvote: function(){
+    this.set('votes', this.get('votes')-1);
   }
   // Add a downvote function; don't forget the comma above.
 });
